# books-generation-system

./: .env.example  .gitignore  README.md  pyproject.toml
data/: books_input.xlsx
src/: __init__.py  check_chapter_gate.py  check_db.py  check_outline_gate.py  compile_book.py  create_excel_template.py  db.py  generate_chapter.py  generate_outline.py  import_books_from_excel.py  main.py  migrate_final_fields.py  models.py  notifications.py  regenerate_chapter.py  ui.py
